BUGFIX: Emblems overlapping the popup menu

--- a/css/core.css
+++ b/css/core.css
@@ -91,7 +91,7 @@ body {
 }
 
 #list li .emblems {
-	z-index: 10;
+	z-index: 1;
 	top: -50px;
 	position: relative;
 	display: block;
